# libkms-dumb

./: meson.build
src/: kms_dumb.c  kms_dumb.h  meson.build
